// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game/> player1 snapshot 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
    >
      <div
        className="MuiTypography-root MuiTypography-body1"
      >
        <div
          className="MuiBox-root MuiBox-root-137"
        >
          Game reference:
          <a
            href="/game/778d5697-e5a4-46c6-91da-7d656fd87a6c/2"
            onClick={[Function]}
          >
            player 2
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiGrid-root makeStyles-playerBoard-1 MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        >
          <p
            className="MuiTypography-root makeStyles-info-2 MuiTypography-body1 MuiTypography-alignCenter"
          >
            Game status
          </p>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
          >
            
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    />
  </div>,
]
`;

exports[`<Game/> player2 snapshot 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
    >
      <div
        className="MuiTypography-root MuiTypography-body1"
      >
        <div
          className="MuiBox-root MuiBox-root-138"
        >
          Game reference:
          <a
            href="/game/778d5697-e5a4-46c6-91da-7d656fd87a6c/1"
            onClick={[Function]}
          >
            player 1
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <div
        className="MuiGrid-root makeStyles-playerBoard-1 MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        >
          <p
            className="MuiTypography-root makeStyles-info-2 MuiTypography-body1 MuiTypography-alignCenter"
          >
            Game status
          </p>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
          >
            
          </p>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    />
  </div>,
]
`;
